Fix some dark mode styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,34 +6,6 @@
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
   --foreground-rgb: 30, 30, 30;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
@@ -43,30 +15,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 220, 220, 220;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
+    --callout-rgb: 40, 40, 40;
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
@@ -117,20 +66,20 @@ table {
 
 /* Header row styles */
 table th {
-  background-color: #f2f2f2;
-  border: 1px solid #ddd;
+  background-color: rgb(var(--callout-rgb));
+  border: 1px solid rgb(var(--callout-border-rgb));
   padding: 8px;
   text-align: left;
 }
 
 /* Alternate row styles */
 table tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: rgb(var(--callout-rgb));
 }
 
 /* Cell styles */
 table td {
-  border: 1px solid #ddd;
+  border: 1px solid rgb(var(--callout-border-rgb));
   padding: 8px;
 }
 
